--- a/src/app/_metronic/layout2/header/header.component.html
+++ b/src/app/_metronic/layout2/header/header.component.html
@@ -52,12 +52,12 @@
             </div>
 
             <!-- Timer container align-items-center   style="width: 300px;padding: 0;margin: auto;"-->
-            <div class="mb-3">
+            <div class="mb-3" style="min-width: 150px;align-items: center;align-content: center;justify-content: center;text-align: center;">
               <div>
                 <app-timer-pass [hr]="hr_paso" [min]="min_paso" [sec]="sec_paso" [ms]="ms_paso" [proyecto_id]="proyecto_id" [rol]="rol" [tiempo_paso]="tiempo_paso" [dia_paso]="dia_paso" *ngIf="showTimerPass"></app-timer-pass>
               </div>
             </div>
-            <div class="mb-3" style="margin-left: 10px;">
+            <div class="mb-3" style="margin-left: 10px;min-width: 150px;align-items: center;align-content: center;justify-content: center;text-align: center;">
               <div>
                 <app-timer [hr]="hr" [min]="min" [sec]="sec" [ms]="ms" [proyecto_id]="proyecto_id" [rol]="rol" *ngIf="showTimer"></app-timer>
               </div>
