ajustes global height lab y ruta volver

--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -1,6 +1,6 @@
 <!--begin::Root-->
 <!--<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">-->
-  <div class="" style="background-color: #070d15 !important;overflow: hidden;">
+  <div class="" style="background-color: #070d15 !important;overflow: hidden;height: 100%;">
     
     <!-- Seccion Loader-->  
     <app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
