--- a/src/app/_metronic/layout2/footer-lab/footer-lab.component.html
+++ b/src/app/_metronic/layout2/footer-lab/footer-lab.component.html
@@ -44,8 +44,10 @@
       <div class="container" style="align-items: flex-end;">
         <a (click)="siguiente()" class="btn btn-success" style="margin: -40px 10px 0px 10px;
         float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
-        <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -40px 10px 0px 10px;
-        float: right;">Salir de MbipiLab</a>
+        <!--<a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -40px 10px 0px 10px;
+        float: right;">Salir de MbipiLab</a>-->
+        <a routerLink="/proyect-init/{{proyecto_id}}" class="btn btn-danger"  style="margin: -40px 10px 0px 10px;
+        float: right;">Salir</a>
       </div>
   
       <!-- <a (click)="onPause()" class="btn btn-lg btn-outline-white flex-shrink-0 my-2" style="text-align: center;margin: auto;background: transparent !important;">
