--- a/src/app/pages/preguntas-voto/preguntas-voto.component.scss
+++ b/src/app/pages/preguntas-voto/preguntas-voto.component.scss
@@ -59,14 +59,26 @@
 
 .tablero-container{
   min-width: 100%;
-  //height: 600px;
+  //min-height: 600px;
   min-height: 60%;
   overflow: auto;
   background-color: #232323;
   position: relative;
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
   margin: 0;
+  margin-bottom: 100px;
+
+  .toolbar{
+    /*position:static !important;*/
+    position: absolute !important;
+  }
+  a{
+    svg{
+      margin-top: -40px;
+    }
+  }
 }
+
 
 :host {
   height: 100%;
