ajuste estilo scope y lean

--- a/src/app/pages/lean/lean.component.scss
+++ b/src/app/pages/lean/lean.component.scss
@@ -77,8 +77,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -91,8 +91,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -103,8 +103,8 @@
   height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
 }
 
@@ -115,8 +115,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -129,8 +129,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -143,8 +143,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -157,8 +157,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -171,8 +171,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -185,8 +185,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -197,8 +197,8 @@
   height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
@@ -210,8 +210,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -224,8 +224,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -238,8 +238,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -252,8 +252,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -266,8 +266,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -280,8 +280,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -294,8 +294,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -308,8 +308,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -322,8 +322,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -336,8 +336,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
