--- a/src/app/pages/scope/scope.component.scss
+++ b/src/app/pages/scope/scope.component.scss
@@ -77,8 +77,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -91,31 +91,31 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
 }
 
 .left-necesidades{  
-  width: 200px;
+  width: 160px;
   height: 500px;
   margin: 30px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .right-necesidades{  
-  width: 200px;
+  width: 160px;
   height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
@@ -127,8 +127,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -141,8 +141,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -155,8 +155,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -169,8 +169,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -178,23 +178,23 @@
 
 
 .left-objetivos{  
-  width: 200px;
+  width: 160px;
   height: 500px;
   margin: 30px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .right-objetivos{  
-  width: 200px;
+  width: 160px;
   height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
@@ -206,8 +206,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -220,8 +220,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -234,8 +234,8 @@
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -248,8 +248,8 @@
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
