--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -75,10 +75,10 @@
     <!--begin::Budget-->
     <div class="card h-100">
       <div class="card-body p-9">
-        <div class="fs-2hx fw-bold">$3,290.00</div>
-        <div class="fs-4 fw-semibold text-gray-400 mb-7">Project Finance</div>
+        <div class="fs-2hx fw-bold">18</div>
+        <div class="fs-4 fw-semibold text-gray-400 mb-7">Días de Proyectos</div>
         <div class="fs-6 d-flex justify-content-between mb-4">
-          <div class="fw-semibold">Avg. Project Budget</div>
+          <div class="fw-semibold">Días completados</div>
           <div class="d-flex fw-bold">
           <!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
           <span class="svg-icon svg-icon-3 me-1 svg-icon-success">
@@ -87,11 +87,11 @@
               <path opacity="0.3" d="M19.8 16.3L8.5 5H18.8C19.4 5 19.8 5.4 19.8 6V16.3Z" fill="currentColor" />
             </svg>
           </span>
-          <!--end::Svg Icon-->$6,570</div>
+          <!--end::Svg Icon-->6</div>
         </div>
         <div class="separator separator-dashed"></div>
         <div class="fs-6 d-flex justify-content-between my-4">
-          <div class="fw-semibold">Lowest Project Check</div>
+          <div class="fw-semibold">Días sin iniciar</div>
           <div class="d-flex fw-bold">
           <!--begin::Svg Icon | path: icons/duotune/arrows/arr006.svg-->
           <span class="svg-icon svg-icon-3 me-1 svg-icon-danger">
@@ -100,21 +100,9 @@
               <path opacity="0.3" d="M19.8 8.5L8.5 19.8H18.8C19.4 19.8 19.8 19.4 19.8 18.8V8.5Z" fill="currentColor" />
             </svg>
           </span>
-          <!--end::Svg Icon-->$408</div>
+          <!--end::Svg Icon-->10</div>
         </div>
-        <div class="separator separator-dashed"></div>
-        <div class="fs-6 d-flex justify-content-between mt-4">
-          <div class="fw-semibold">Ambassador Page</div>
-          <div class="d-flex fw-bold">
-          <!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
-          <span class="svg-icon svg-icon-3 me-1 svg-icon-success">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M13.4 10L5.3 18.1C4.9 18.5 4.9 19.1 5.3 19.5C5.7 19.9 6.29999 19.9 6.69999 19.5L14.8 11.4L13.4 10Z" fill="currentColor" />
-              <path opacity="0.3" d="M19.8 16.3L8.5 5H18.8C19.4 5 19.8 5.4 19.8 6V16.3Z" fill="currentColor" />
-            </svg>
-          </span>
-          <!--end::Svg Icon-->$920</div>
-        </div>
+        <!--<div class="separator separator-dashed"></div>-->
       </div>
     </div>
     <!--end::Budget-->
@@ -247,8 +235,8 @@
           <!--end::Due-->
           <!--begin::Budget-->
           <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 mb-3">
-            <div class="fs-6 text-gray-800 fw-bold">$284,900.00</div>
-            <div class="fw-semibold text-gray-400">Budget</div>
+            <div class="fs-6 text-gray-800 fw-bold">{{proyecto.equipos_equipo.equipo_proyecto[0].tiempo != '' && proyecto.equipos_equipo.equipo_proyecto[0].tiempo != undefined ? proyecto.equipos_equipo.equipo_proyecto[0].tiempo : '00:00'}}</div>
+            <div class="fw-semibold text-gray-400">Tiempo</div>
           </div>
           <!--end::Budget-->
         </div>
