--- a/src/app/_metronic/layout/components/header/header.component.html
+++ b/src/app/_metronic/layout/components/header/header.component.html
@@ -87,6 +87,11 @@
         ></app-page-title>-->
       </div>
     </ng-container>
+    <div class="d-flex align-items-center" id="kt_header_nav">
+      <h1 class="d-flex align-items-center text-dark fw-bolder my-1 fs-3">
+        <img alt="Logo" src="./assets/media/logos/Logo_mbipi.png" class="h-45px logo">
+      </h1>
+    </div>
 
     <div class="d-flex align-items-stretch flex-shrink-0">
       <app-topbar class="d-flex align-items-stretch flex-shrink-0"></app-topbar>
